--- a/src/styles/contact_button.css
+++ b/src/styles/contact_button.css
@@ -1,4 +1,4 @@
-.contact-button {
+.cta-button {
     background-color: #444;
     color: white;
     padding: 10px 15px;
@@ -8,7 +8,7 @@
     transition: background 0.3s ease-in-out;
 }
 
-.contact-button.registrarse {
+.cta-button.registrarse {
     margin-left: auto;
     background-color: #444;
     color: white;
@@ -19,6 +19,39 @@
     transition: background 0.3s ease-in-out;
 }
 
-.contact-button:hover {
+.cta-button:hover {
     background-color: #666;
+}
+
+
+.cta-button-info {
+    background-color: white;
+    color: #5c5757;
+    padding: 12px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.cta-button-info:hover {
+    background-color: #c9302c;
+    color: white;
+}
+
+.cta-button-bid {
+    background-color: #c9302c;
+    color: #ffffff;
+    padding: 12px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.cta-button-bid:hover {
+    background-color: #5e5453;
+    color: white;
 }
