--- a/src/app/login/login_style.module.css
+++ b/src/app/login/login_style.module.css
@@ -1,18 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; 
-    margin: 0;
-}
-
-main {
+.main-login{
     flex: 1;
     display: flex;
     justify-content: center;
