--- a/src/public/styles/index_styles.css
+++ b/src/public/styles/index_styles.css
@@ -1,24 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; 
-    margin: 0;
-}
-
-/* Estilo general del main */
 main {
-    padding: 2rem;
-    max-width: 1200px;
-    margin: auto;
+    padding: 2rem !important;
+    max-width: 1200px !important;
+    margin: auto !important;
 }
 
-/* Hero Section (Encabezado de Bienvenida) */
 .hero {
     text-align: center;
     background: linear-gradient(135deg, #a19d9d, #110f0f);
@@ -44,7 +29,6 @@ main {
 }
 
 
-/* Sección de Subastas Destacadas */
 .featured-auctions {
     text-align: center;
     margin-top: 3rem;
@@ -55,7 +39,7 @@ main {
     margin-bottom: 1rem;
 }
 
-/* Diseño en grid para los productos */
+
 .auction-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -63,7 +47,6 @@ main {
     justify-content: center;
 }
 
-/* Estilo de cada tarjeta de subasta */
 .auction-item {
     background: #fff;
     border: 1px solid #ddd;
@@ -78,7 +61,6 @@ main {
     transform: scale(1.05);
 }
 
-/* Imagen dentro de cada tarjeta */
 figure {
     margin: 0;
 }
@@ -90,14 +72,12 @@ figure img {
     border-bottom: 2px solid #dd352f;
 }
 
-/* Texto debajo de la imagen */
 figcaption {
     font-size: 1.2rem;
     font-weight: bold;
     margin-top: 10px;
 }
 
-/* Precio */
 .price {
     font-size: 1.1rem;
     color: #d9534f;
@@ -106,7 +86,6 @@ figcaption {
 }
 
 
-/* Sección Informativa */
 .info-section {
     text-align: center;
     margin-top: 3rem;
@@ -126,11 +105,10 @@ figcaption {
     margin-bottom: 1.5rem;
 }
 
-/* Mensaje cuando no hay subastas activas */
 .no-auctions {
     text-align: center;
     margin-top: 2rem;
     font-size: 1.2rem;
     color: #777;
-    display: none; /* Ocultar por defecto */
+    display: none;
 }
