--- a/app/register/register_style.module.css
+++ b/app/register/register_style.module.css
@@ -34,6 +34,20 @@
     border-radius: 5px;
 }
 
+.register-form input:focus {
+    border-color: #0070f3;
+    box-shadow: 0 0 0 2px rgba(0,112,243,0.2);
+}
+
+.help-text {
+    display: block;
+    font-size: 0.85rem;
+    color: #666;
+    margin-top: -10px;
+    margin-bottom: 15px;
+    font-style: italic;
+}
+
 .button-group {
     display: flex;
     flex-direction: column;
